Changed config log info to be a single filename including directory

--- a/test/telemetry/config/tracer-test.yml
+++ b/test/telemetry/config/tracer-test.yml
@@ -3,8 +3,6 @@ sample:
   number_of_requests: 1
   out_of: 1
 error_logger: "/tmp/tracer_exceptions.log"
-logger:
-  filename: tracer.log
-  directory: /tmp
+logger: "/tmp/tracer.log"
 annotations:
   service: MySplendidServiceName
