Switch the runner off if unable to create the log file. * also create log files from relative dirs

--- a/spec/telemetry/config/tracer-test.yml
+++ b/spec/telemetry/config/tracer-test.yml
@@ -2,7 +2,7 @@ enabled: true
 sample:
   number_of_requests: 1
   out_of: 1
-error_logger: "/tmp/tracer_exceptions.log"
-logger: "/tmp/tracer.log"
+error_logger: /tmp/tracer_exceptions.log
+logger: /tmp/tracer.log
 annotations:
   service: MySplendidServiceName
